--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </main>
 
   <footer>
-    Proyecto realizado por: Josué Pinzón.
+    Proyecto realizado por: Ingenieria Cristina Ojo.
   </footer>
 
   <!-- Scripts -->
@@ -127,3 +127,4 @@
   </script>
 </body>
 </html>
+
